fix text overlapping in menus #FL-513

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -326,6 +326,7 @@ h4
 
 #user_menu ul.subnav li
 {
+    white-space: nowrap;
     display: block;
     float: none;
     padding: 0;
